2006-10-27  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* doxygen.am: Updating and improving doxygen output.
	* doxygen.cfg: Likewise.
	* include/dlvhex/ASPsolver.h: Likewise.
	* include/dlvhex/AggregateAtom.h: Likewise.
	* include/dlvhex/DLVresultParserDriver.h: Likewise.
	* include/dlvhex/HexParserDriver.h: Likewise.
	* include/dlvhex/Term.h: Likewise.
	* src/dlvhex/ASPsolver.cpp: Likewise.
	* src/dlvhex/Component.cpp (evaluate): Likewise.
	* src/dlvhex/DLVresultParserDriver.cpp: Likewise.
	* src/dlvhex/HexParserDriver.cpp: Likewise.
	* src/dlvhex/OutputBuilder.cpp: Likewise.
	* src/dlvhex/PluginInterface.cpp: Likewise.
	* src/dlvhex/Term.cpp (Term): Likewise.
	* src/dlvhex/dlvhex.cpp: Likewise.

2006-10-25  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/dlvhex/BaseVisitor.h: Add doxygen doc.
	* include/dlvhex/PrintVisitor.h: Likewise.
	* include/dlvhex/ProgramBuilder.h: Likewise.
	* include/dlvhex/Repository.h: Likewise.

2006-10-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/Makefile.am: Add PrintVisitor.cpp and bump library
	version to 3:0:0.

	* include/dlvhex/Makefile.am: Add BaseVisitor.h and
	PrintVisitor.h.
	
	* include/dlvhex/BaseVisitor.h: Add Visistor classes.
	* include/dlvhex/PrintVisitor.h: Likewise.
	* src/dlvhex/PrintVisitor.cpp: Likewise.

	* include/dlvhex/AggregateAtom.h: Implement Visitor Pattern.
	* include/dlvhex/Atom.h: Likewise.
	* include/dlvhex/AtomSet.h: Likewise.
	* include/dlvhex/ExternalAtom.h: Likewise.
	* include/dlvhex/Literal.h: Likewise.
	* include/dlvhex/ProgramBuilder.h: Likewise.
	* include/dlvhex/Repository.h: Likewise.
	* include/dlvhex/Rule.h: Likewise.
	* src/dlvhex/AggregateAtom.cpp: Likewise.
	* src/dlvhex/AnswerSet.cpp: Likewise.
	* src/dlvhex/Atom.cpp: Likewise.
	* src/dlvhex/AtomSet.cpp: Likewise.
	* src/dlvhex/BoostComponentFinder.cpp: Likewise.
	* src/dlvhex/ExternalAtom.cpp: Likewise.
	* src/dlvhex/GraphProcessor.cpp: Likewise.
	* src/dlvhex/GuessCheckModelGenerator.cpp: Likewise.